Wifi: add saner configuration...

--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -29,6 +29,11 @@ InfraUapsdBkSrvIntv=0
 # Flag to allow STA send AddTspec even when ACM is Off
 gAddTSWhenACMIsOff=1
 
+# Flags to filter Mcast and Bcast RX packets.
+# Value 0: No filtering, 1: Filter all Multicast.
+# 2: Filter all Broadcast. 3: Filter all Mcast abd Bcast
+McastBcastFilter=3
+
 #Flag to enable HostARPOffload feature or not
 hostArpOffload=1
 
@@ -56,8 +61,8 @@ gFixedRate=0
 # RTS threshold
 RTSThreshold=2346
 
-# CTS2SELF_ENABLED_4_SWRETRIES
-gEnableRTSProfiles=34
+# RTSCTS_ENABLED_4_SWRETRIES
+gEnableRTSProfiles=33
 
 # Intra-BSS forward
 gDisableIntraBssFwd=0
@@ -79,6 +84,7 @@ EseEnabled=0
 
 ImplicitQosIsEnabled=0
 
+gNeighborScanTimerPeriod=200
 gNeighborLookupThreshold=76
 gNeighborScanChannelMinTime=20
 gNeighborScanChannelMaxTime=30
@@ -95,9 +101,19 @@ FastRoamEnabled=1
 # be for roaming
 RoamRssiDiff=5
 
+#After consecutive number of beacons missed as configured by gRoamBmissFirstBcnt,
+#the system stays alive (no power collapse) to receive beacons until final BMISS
+#(consecutive number of beacons missed as configured by gRoamBmissFinalBcnt)
+gRoamBmissFirstBcnt=10
+gRoamBmissFinalBcnt=20
+
+#set roam_trigger_reason_bitmask to trigger roaming by weiqiang
+roam_trigger_reason_bitmask=0xD2
+
 # To enable, set gRoamIntraBand=1 (Roaming within band)
 # To disable, set gRoamIntraBand=0 (Roaming across band)
 gRoamIntraBand=0
+
 # Sets RSSI preference for 5GHz over 2.4GHz AP
 gSelect5GHzMargin=5
 
@@ -166,16 +182,6 @@ gEnableDFSChnlScan=1
 gAllowDFSChannelRoam=1
 
 gVhtChannelWidth=2
-
-# Enable Generic Receive Offload
-# LRO and GRO are exclusive to each other
-# LRO support is deprecated on latest 4.9(SDM845) kernel
-GROEnable=1
-
-# Enable/Disable DTIM Synth
-# 1- Enable DTIM Synth
-# 0- Disable DTIM Synth
-gEnableLPRx=0
 
 #Data Inactivity Timeout when in powersave (in ms)
 gDataInactivityTimeout=200
@@ -246,7 +252,11 @@ gEnablefwprint=0
 # Firmware log mode
 # Valid values are 0,1,2
 # 0=Disable, 1=WMI, 2=DIAG
-gEnablefwlog=1
+gEnablefwlog=0
+
+# Enable pkt log
+# 1 - enable, 0 - disable
+gEnablePacketLog=0
 
 # Maximum Receive AMPDU size (VHT only. Valid values:
 # 0->8k 1->16k 2->32k 3->64k 4->128k)
@@ -270,6 +280,11 @@ gVhtMpduLen=2
 # Enable or Disable MCC Adaptive Scheduler at the FW
 # 1=Enable (default), 0=Disable
 gEnableMCCAdaptiveScheduler=1
+
+#Skip DFS Channel in case of P2P Search
+# 0 - disable (Scan DFS Channel in P2P Search)
+# 1 - enable (Skip DFS Channel)
+gSkipDfsChannelInP2pSearch=0
 
 #Enable or Disable p2p device address administered
 isP2pDeviceAddrAdministrated=0
@@ -311,11 +326,7 @@ gMaxConcurrentActiveSessions=3
 
 # Disable/Enable GreenAP
 # 0 to disable, 1 to enable, default: 1
-gEnableGreenAp=1
-
-# Disable/Enbale Enhanced Green AP
-# 0 to disable, 1 to enable, default: 0
-gEnableEGAP=1
+gEnableGreenAp=0
 
 # Radar PRI multiplier
 gDFSradarMappingPriMultiplier=4
@@ -377,7 +388,7 @@ gTDLSExternalControl=1
 gEnableTDLSOffChannel=1
 
 # Enable or Disable Random MAC (Spoofing)
-# 1=Enable, 0=Disable (default)
+# 1=Enable (default), 0=Disable
 gEnableMacAddrSpoof=1
 
 ################ Datapath feature set Begin ################
@@ -423,7 +434,7 @@ gCEClassifyEnable=1
 
 # Enable Rx handling options
 # Rx_thread=1 RPS=2(default for ROME) NAPI=4(default for ihelium)
-rx_mode=4
+rx_mode=5
 
 # Enable(Tx) fastpath for data traffic.
 # 1 - enable(default)  0 - disable
@@ -438,8 +449,7 @@ gEnableIpTcpUdpChecksumOffload=1
 TSOEnable=1
 
 # Enable Generic Receive Offload
-# LRO and GRO are exclusive to each other
-# LRO support is deprecated on latest 4.9(SDM845) kernel
+# 1 - enable(default)  0 - disable
 GROEnable=1
 
 # Enable HT MPDU Density
@@ -461,6 +471,14 @@ ce_service_max_rx_ind_flush=1
 # Maximum number of MSDUs the firmware will pack in one HTT_T2H_MSG_TYPE_RX_IN_ORD_PADDR_IND
 maxMSDUsPerRxInd=8
 
+# Enable NUD tracking feature
+# 1 - enable 0 - disable(default)
+gEnableNUDTracking=1
+
+# Enable PEER UNMAP CONF SUPPORT
+# 1 - enable 0 - disable(default)
+gEnablePeerUnmapConfSupport=1
+
 ################ Datapath feature set End ################
 
 ################ NAN feature set start ###################
@@ -468,84 +486,34 @@ maxMSDUsPerRxInd=8
 # Enable NAN discovery (NAN 1.0)
 # 1 - enable  0 - disable(default)
 gEnableNanSupport=1
+# Enable NAN Datapath
 genable_nan_datapath=1
+
 ################ NAN feature set end #####################
 
 adaptive_dwell_mode_enabled=1
 
 hostscan_adaptive_dwell_mode=1
 
-hostscan_adaptive_dwell_mode_no_conn=4
-
 adapt_dwell_lpf_weight=80
 
 adapt_dwell_wifi_act_threshold=10
 
-oce_enable_probe_req_deferral=0
+MAWCEnabled=0
 
-scan_flag_dwell_mode_enabled=0
+drop_bcn_on_chan_mismatch=0
 
-# Enable pkt log
-# 1 - enable, 0 - disable
-gEnablePacketLog=1
+# Enable/Disable rtt sta mac randomization
+enable_rtt_mac_randomization=1
 
-# Force 1x1 for 2.4g SAP, P2P-GC/GO, 2x2 for STA
-# gVdevTypeNss_2g=21846
+# Create another interface during driver load
+gEnableConcurrentSTA=wlan1
 
-# 0: Disable BPF packet filter
-# 1: Enable BPF packet filter
-gBpfFilterEnable=1
+#Enable/Disable SNR monitoring
+gEnableSNRMonitoring=1
 
-# 0: Disable force 1x1 on MTK solution AP
-# 1: Enable force 1x1 on MTK solution AP
-# gForce1x1Exception=1
-
-# set modulated DTIM interval
-gEnableModulatedDTIM=3
-gMaxLIModulatedDTIM=3
-
-# groam_dense_rssi_thresh_offset - Sets dense roam RSSI threshold diff
-groam_dense_rssi_thresh_offset=5
-
-# Dense traffic threshold in kBps
-gtraffic_threshold=50
-
-# Set beacon missed count threshold
-# if beacon missed counter > gRoamBmissFirstBcnt+gRoamBmissFinalBcnt,
-# heartbeat error triggered
-gRoamBmissFirstBcnt=10
-gRoamBmissFinalBcnt=20
-
-# To enabled/disable PER based roaming in FW
-# 0: disabled
-# 1: enabled for Rx traffic
-# 2: enabled for Tx traffic
-# 3: enabled for Tx and Rx traffic
-gper_roam_enabled=3
-
-# arp_ac_category - ARP access category
-# Firmware by default categorizes ARP packets with VOICE TID.
-# WME_AC_BE = 0 (Best effort)
-# WME_AC_BK = 1 (Background)
-# WME_AC_VI = 2 (Video)
-# WME_AC_VO = 3 (Voice)
-arp_ac_category=0
-
-# Enable/Disable DTIM Synth
-# 1- Enable DTIM Synth
-# 0- Disable DTIM Synth
-gEnableLPRx=0
-
-enable_scoring_for_roam=1
-
-oce_enable_probe_req_deferral=1
-
-oce_enable_probe_req_rate=1
-
-enable_esp_for_roam=1
-##################### Scoring Param ###############
-esp_qbss_score_idx7_to_4=0000000A
-
+#Enable/Disable LPRx
+gEnableLPRx=1
 # Enable Packet filters before going into suspend
 # will clear those when resume
 # bit-0 : drop MAC multicast and IPv4 multicast
@@ -554,30 +522,18 @@ esp_qbss_score_idx7_to_4=0000000A
 # bit-3 : drop XID - Exchange station Identification packet
 # bit-4 : drop STP - Spanning Tree Protocol
 # bit-5 : drop DTP/LLC/CDP
-g_enable_packet_filter_bitmap=0
+g_enable_packet_filter_bitmap=3
 
-#Enable host side recovery
-gEnableSelfRecovery=1
+# WLM latency Enable
+wlm_latency_enable=1
 
-enable_ftopen=0
+# WLM flags setting for ultralow level, bit9 for BMPS disabled
+wlm_latency_flags_ultralow=0xe03
 
-# This ini is used to allow STA+SAP SCC on LTE coex channel
-# 0 - Disallow STA+SAP SCC on LTE coex channel
-# 1 - Allow STA+SAP SCC on LTE coex channel
-g_sta_sap_scc_on_lte_coex_chan=1
-
-#Add another interface while driver load
-gEnableConcurrentSTA=wlan1
-
-# This ini is used to allow STA+SAP SCC on DFS channel with master mode
-# support disabled
-# 0 - Disallow STA+SAP SCC on DFS channel
-# 1 - Allow STA+SAP SCC on DFS channel with master mode disabled
-g_sta_sap_scc_on_dfs_chan=1
-
-gChannelBondingMode24GHz=1
+# Disable rx wakelock
+rx_wakelock_timeout=0
 
 END
 
-
+# Note: Configuration parser would not read anything past the END marker
 
