wifi: align configuration to nicobar suggested one

--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -43,8 +43,9 @@ hostNSOffload=1
 # 802.11n Protection flag
 gEnableApProt=1
 
+#Chk16859 huzhiqiang 20190308 modify Bingup checklist
 #Enable OBSS protection
-gEnableApOBSSProt=1
+gEnableApOBSSProt=0
 
 #Enable/Disable UAPSD for SoftAP
 gEnableApUapsd=1
@@ -59,16 +60,13 @@ gFixedRate=0
 # gFragmentationThreshold=2346
 
 # RTS threshold
-RTSThreshold=2346
-
-# RTSCTS_ENABLED_4_SWRETRIES
-gEnableRTSProfiles=33
+#RTSThreshold=1048576
 
 # Intra-BSS forward
 gDisableIntraBssFwd=0
 
 # WMM Enable/Disable
-WmmIsEnabled=1
+WmmIsEnabled=0
 
 # 802.11d support
 g11dSupportEnabled=0
@@ -80,7 +78,7 @@ g11hSupportEnabled=1
 gEnableDFSMasterCap=1
 
 # ESE Support and fast transition
-EseEnabled=1
+EseEnabled=0
 
 ImplicitQosIsEnabled=0
 
@@ -93,7 +91,7 @@ gMaxNeighborReqTries=3
 # Legacy (non-ESE, non-802.11r) Fast Roaming Support
 # To enable, set FastRoamEnabled=1
 # To disable, set FastRoamEnabled=0
-FastRoamEnabled=0
+FastRoamEnabled=1
 
 # Check if the AP to which we are roaming is better than current AP in
 # terms of RSSI.  Checking is disabled if set to Zero.Otherwise it will
@@ -101,27 +99,9 @@ FastRoamEnabled=0
 # be for roaming
 RoamRssiDiff=5
 
-#After consecutive number of beacons missed as configured by gRoamBmissFirstBcnt,
-#the system stays alive (no power collapse) to receive beacons until final BMISS
-#(consecutive number of beacons missed as configured by gRoamBmissFinalBcnt)
-gRoamBmissFirstBcnt=10
-gRoamBmissFinalBcnt=20
-
-#set roam_trigger_reason_bitmask to trigger roaming by weiqiang
-roam_trigger_reason_bitmask=0xD2
-
 # To enable, set gRoamIntraBand=1 (Roaming within band)
 # To disable, set gRoamIntraBand=0 (Roaming across band)
 gRoamIntraBand=0
-
-# Sets RSSI preference for 5GHz over 2.4GHz AP
-gSelect5GHzMargin=5
-
-# RSSI threshold offset for 2G to 5G roam
-roam_bad_rssi_thresh_offset_2g=0
-
-#RSSI threshold for background roam
-roam_bg_scan_bad_rssi_thresh=-76
 
 #Short Guard Interval Enable/disable
 gShortGI20Mhz=1
@@ -166,9 +146,6 @@ gChannelBondingMode5GHz=1
 # (gApLinkMonitorPeriod + gApKeepAlivePeriod)
 gGoKeepAlivePeriod = 20
 gApKeepAlivePeriod = 20
-
-#Enable Keep alive with non-zero period value
-gStaKeepAlivePeriod = 30
 
 #If set will start with active scan after driver load, otherwise will start with
 #passive scan to find out the domain
@@ -244,7 +221,7 @@ gMaxMediumTime = 6000
 gRrmEnable=1
 
 #Enable Power Save offload
-gEnablePowerSaveOffload=1
+gEnablePowerSaveOffload=2
 
 #Enable firmware uart print
 gEnablefwprint=0
@@ -252,11 +229,7 @@ gEnablefwprint=0
 # Firmware log mode
 # Valid values are 0,1,2
 # 0=Disable, 1=WMI, 2=DIAG
-gEnablefwlog=0
-
-# Enable pkt log
-# 1 - enable, 0 - disable
-gEnablePacketLog=0
+gEnablefwlog=1
 
 # Maximum Receive AMPDU size (VHT only. Valid values:
 # 0->8k 1->16k 2->32k 3->64k 4->128k)
@@ -280,11 +253,6 @@ gVhtMpduLen=2
 # Enable or Disable MCC Adaptive Scheduler at the FW
 # 1=Enable (default), 0=Disable
 gEnableMCCAdaptiveScheduler=1
-
-#Skip DFS Channel in case of P2P Search
-# 0 - disable (Scan DFS Channel in P2P Search)
-# 1 - enable (Skip DFS Channel)
-gSkipDfsChannelInP2pSearch=0
 
 #Enable or Disable p2p device address administered
 isP2pDeviceAddrAdministrated=0
@@ -326,7 +294,7 @@ gMaxConcurrentActiveSessions=3
 
 # Disable/Enable GreenAP
 # 0 to disable, 1 to enable, default: 1
-gEnableGreenAp=1
+gEnableGreenAp=0
 
 # Radar PRI multiplier
 gDFSradarMappingPriMultiplier=4
@@ -340,8 +308,9 @@ gEnableLpassSupport=1
 # Whether userspace country code setting shld have priority
 gCountryCodePriority=1
 
+#Chk20572 huzhiqiang 20190308 modify Bingup checklist
 # Enable(1)/Disable(0) SIFS burst
-gEnableSifsBurst=1
+gEnableSifsBurst=3
 
 # Enable or Disable Multi-user MIMO
 # 1=Enable (default), 0=Disable
@@ -481,6 +450,28 @@ gEnablePeerUnmapConfSupport=1
 
 ################ Datapath feature set End ################
 
+################ExtR HONGMI-59465 set start ###################
+RTSThreshold=2346
+gSelect5GHzMargin=5
+roam_bad_rssi_thresh_offset_2g=0
+roam_bg_scan_bad_rssi_thresh=-76
+gStaKeepAlivePeriod = 30
+gEnablePacketLog=1
+gEnableModulatedDTIM=3
+gMaxLIModulatedDTIM=3
+groam_dense_rssi_thresh_offset=5
+gtraffic_threshold=50
+gRoamBmissFirstBcnt=10
+gRoamBmissFinalBcnt=20
+gper_roam_enabled=3
+arp_ac_category=0
+gEnableSelfRecovery=1
+enable_ftopen=0
+################ExtR HONGMI-59465 set end ###################
+
+#ExtB HONGMI-59430 huzhiqiang 20190419 add disable RTT for android.net.wifi.rtt.cts.wifiRttTest
+gEnableRTTSupport=0
+
 ################ NAN feature set start ###################
 
 # Enable NAN discovery (NAN 1.0)
@@ -513,27 +504,10 @@ gEnableConcurrentSTA=wlan1
 gEnableSNRMonitoring=1
 
 #Enable/Disable LPRx
-gEnableLPRx=1
-# Enable Packet filters before going into suspend
-# will clear those when resume
-# bit-0 : drop MAC multicast and IPv4 multicast
-# bit-1 : drop MAC unicast and IPv4 multicast
-# bit-2 : drop IPv4 broadcast
-# bit-3 : drop XID - Exchange station Identification packet
-# bit-4 : drop STP - Spanning Tree Protocol
-# bit-5 : drop DTP/LLC/CDP
-g_enable_packet_filter_bitmap=3
+gEnableLPRx=0
 
-# WLM latency Enable
-wlm_latency_enable=1
-
-# WLM flags setting for ultralow level, bit9 for BMPS disabled
-wlm_latency_flags_ultralow=0xe03
-
-# Disable rx wakelock
-rx_wakelock_timeout=0
-
+#ExtR HOMGMI-61658,sunbin1.wt, add, 20190523,modify the 2.g scan time as 40ms
+active_max_channel_time_2g=40
 END
 
 # Note: Configuration parser would not read anything past the END marker
-
