nfc: move conf files to their own folder

--- a/nfc/libnfc-nci.conf
+++ b/nfc/libnfc-nci.conf
@@ -1,11 +1,9 @@
-###################### Start of libnfc-common.conf #######################
+###################### Start of libnfc-nci.conf #######################
 
 ###############################################################################
 # Application options
 APPL_TRACE_LEVEL=0xFF
 PROTOCOL_TRACE_LEVEL=0xFFFFFFFF
-
-NFC_DEBUG_ENABLED=0x01
 
 ###############################################################################
 # File used for NFA storage
@@ -97,7 +95,7 @@ P2P_LISTEN_TECH_MASK=0xC5
 
 PRESERVE_STORAGE=0x01
 
-###############################################################################
+##############################################################################
 # Deactivate notification wait time out in seconds used in ETSI Reader mode
 # 0 - Infinite wait
 NFA_DM_DISC_NTF_TIMEOUT=0
