--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -13,6 +13,13 @@ gEnableBmps=1
 # 7 = 11b only 8 = 11ac only.
 gDot11Mode=0
 
+# Enable suspend or not
+# 1: Enable standby, 2: Enable Deep sleep, 3: Enable Mcast/Bcast Filter
+gEnableSuspend=3
+
+# Set/Clear UAPSD mask
+UapsdMask=0
+
 # Assigned MAC Addresses - This will be used until NV items are in place
 # Each byte of MAC address is represented in Hex format as XX
 Intf0MacAddress=000AF58989FF
@@ -43,9 +50,8 @@ hostNSOffload=1
 # 802.11n Protection flag
 gEnableApProt=1
 
-#Chk16859 huzhiqiang 20190308 modify Bingup checklist
 #Enable OBSS protection
-gEnableApOBSSProt=0
+gEnableApOBSSProt=2
 
 #Enable/Disable UAPSD for SoftAP
 gEnableApUapsd=1
@@ -60,7 +66,7 @@ gFixedRate=0
 # gFragmentationThreshold=2346
 
 # RTS threshold
-#RTSThreshold=1048576
+RTSThreshold=2347
 
 # Intra-BSS forward
 gDisableIntraBssFwd=0
@@ -78,12 +84,13 @@ g11hSupportEnabled=1
 gEnableDFSMasterCap=1
 
 # ESE Support and fast transition
-EseEnabled=0
+EseEnabled=1
 
 ImplicitQosIsEnabled=0
 
 gNeighborScanTimerPeriod=200
 gNeighborLookupThreshold=76
+gNeighborReassocThreshold=81
 gNeighborScanChannelMinTime=20
 gNeighborScanChannelMaxTime=30
 gMaxNeighborReqTries=3
@@ -97,7 +104,13 @@ FastRoamEnabled=1
 # terms of RSSI.  Checking is disabled if set to Zero.Otherwise it will
 # use this value as to how better the RSSI of the new/roamable AP should
 # be for roaming
-RoamRssiDiff=5
+RoamRssiDiff=3
+
+# If the RSSI of any available candidate is better than currently associated
+# AP by at least gImmediateRoamRssiDiff, then being to roam immediately (without
+# registering for reassoc threshold).
+# NOTE: Value of 0 means that we would register for reassoc threshold.
+gImmediateRoamRssiDiff=10
 
 # To enable, set gRoamIntraBand=1 (Roaming within band)
 # To disable, set gRoamIntraBand=0 (Roaming across band)
@@ -119,8 +132,22 @@ gApAutoChannelSelection=0
 #Preferred band (both or 2.4 only or 5 only)
 BandCapability=0
 
+gLFRSubnetDetectionEnable=0
+
+gNthBeaconFilter=50
+
+gRuntimePM=1
+gRuntimePMDeleay=500
+
+# TPC power
+gSelfGenFrmPwr=3
+
+#Enable/Disable Secondary Retry Rate feature subset
+gEnableSecondaryRate=0x17
+
 #Channel Bonding
 gChannelBondingMode5GHz=1
+gChannelBondingMode24GHz=1
 
 #Say gGoKeepAlivePeriod(5 seconds) and gGoLinkMonitorPeriod(10 seconds).
 #For every 10 seconds DUT send Qos Null frame(i.e., Keep Alive frame if link
@@ -144,12 +171,12 @@ gChannelBondingMode5GHz=1
 #are succeed to send or not. Hence total effective detection time is
 # (gGoLinkMonitorPeriod + gGoKeepAlivePeriod) /
 # (gApLinkMonitorPeriod + gApKeepAlivePeriod)
-gGoKeepAlivePeriod = 20
-gApKeepAlivePeriod = 20
+gGoKeepAlivePeriod = 10
+gApKeepAlivePeriod = 30
 
 #If set will start with active scan after driver load, otherwise will start with
 #passive scan to find out the domain
-gEnableBypass11d=1
+# gEnableBypass11d=1
 
 #If set to 0, will not scan DFS channels
 gEnableDFSChnlScan=1
@@ -172,10 +199,14 @@ gSetTxChainmask1x1=1
 gSetRxChainmask1x1=1
 
 # Scan Timing Parameters
-# gPassiveMaxChannelTime=110
-# gPassiveMinChannelTime=60
+gPassiveMaxChannelTime=110
+gPassiveMinChannelTime=60
 gActiveMaxChannelTime=40
 gActiveMinChannelTime=20
+
+# Enable Tx LDPC
+# gTxLdpcEnable = 1 for HT mode, 2 for VHT mode,3 for both HT and VHT
+gTxLdpcEnable=3
 
 #If set to 0, MCC is not allowed.
 gEnableMCCMode=1
@@ -187,7 +218,7 @@ gEnableMCCMode=1
 # 3-Force SCC if same band, without SAP restart by sending (E)CSA
 # 4-Force SCC if same band (or) use SAP mandatory channel for DBS,
 #   without SAP restart by sending (E)CSA
-gWlanMccToSccSwitchMode = 3
+gWlanMccToSccSwitchMode = 0
 
 # 1=enable STBC; 0=disable STBC
 gEnableRXSTBC=1
@@ -212,6 +243,9 @@ gEnableTxBFin20MHz=1
 #Enable/Disable SU Tx beamformer support.
 gEnableTxSUBeamformer=1
 
+#Enable thermal mitigation
+gThermalMitigationEnable=0
+
 gEnableFastRoamInConcurrency=1
 
 #Maxium Channel time in msec
@@ -229,7 +263,7 @@ gEnablefwprint=0
 # Firmware log mode
 # Valid values are 0,1,2
 # 0=Disable, 1=WMI, 2=DIAG
-gEnablefwlog=1
+gEnablefwlog=0
 
 # Maximum Receive AMPDU size (VHT only. Valid values:
 # 0->8k 1->16k 2->32k 3->64k 4->128k)
@@ -267,6 +301,10 @@ gEnableOverLapCh=0
 #Enable VHT on 2.4Ghz
 gEnableVhtFor24GHzBand=1
 
+gEnableModulatedDTIM=2
+gMaxLIModulatedDTIM=6
+gStaKeepAlivePeriod=60
+
 #Maximum number of offload peers supported
 # gMaxOffloadPeers=2
 
@@ -276,6 +314,24 @@ gEnableVhtFor24GHzBand=1
 # Setup multicast pattern for mDNS 224.0.0.251,
 # SSDP 239.255.255.250 and LLMNR 224.0.0.252
 ssdp=0
+
+#Enable Active mode offload
+gActiveModeOffload=1
+gEnableActiveModeOffload=1
+
+#Enable APF in Active mode
+gActiveUcBpfMode=2
+gActiveMcBcBpfMode=1
+
+gEnableLogp=0
+gEnablefwlog=0
+
+#HW CCE Filter mode
+gHwFilterMode=0
+
+#Enable MC address filtering offload
+gMCAddrListEnable=1
+
 
 #Enable Memory Deep Sleep
 gEnableMemDeepSleep=1
@@ -290,7 +346,7 @@ gRegulatoryChangeCountry=1
 gRArateLimitInterval=600
 
 # Maximum number of concurrent connections
-gMaxConcurrentActiveSessions=3
+gMaxConcurrentActiveSessions=2
 
 # Disable/Enable GreenAP
 # 0 to disable, 1 to enable, default: 1
@@ -300,6 +356,10 @@ gEnableGreenAp=0
 gDFSradarMappingPriMultiplier=4
 
 gPNOScanSupport=1
+gPNOScanTimerRepeatValue=6
+
+# Enable/Disable RX full reorder offload
+gReorderOffloadSupported=1
 
 #Enable/Disable LPASS support
 # 0 to disable, 1 to enable
@@ -310,11 +370,21 @@ gCountryCodePriority=1
 
 #Chk20572 huzhiqiang 20190308 modify Bingup checklist
 # Enable(1)/Disable(0) SIFS burst
-gEnableSifsBurst=3
+gEnableSifsBurst=1
+
+# Tx Chain Mask for CCK
+gCckChainMaskEnable=1
+
+# Tx Chain Mask for 1SS
+gTxChainMask1ss=0
 
 # Enable or Disable Multi-user MIMO
 # 1=Enable (default), 0=Disable
 gEnableMuBformee=1
+
+gEnableTDLSScan=1
+gTDLSTxPacketThreshold=10
+gTDLSIdlePacketThreshold=1
 
 # Enable/Disable channel avoidance for SAP in SCC scenario
 # 0 - disable
@@ -358,7 +428,7 @@ gEnableTDLSOffChannel=1
 
 # Enable or Disable Random MAC (Spoofing)
 # 1=Enable (default), 0=Disable
-gEnableMacAddrSpoof=1
+gEnableMacAddrSpoof=0
 
 ################ Datapath feature set Begin ################
 # Bus bandwidth threshold values in terms of number of packets
@@ -421,6 +491,10 @@ TSOEnable=1
 # 1 - enable(default)  0 - disable
 GROEnable=1
 
+# Enable Large Recieve Offload
+# 1 - enable(default)  0 - disable
+LROEnable=0
+
 # Enable HT MPDU Density
 # 4 for 2 micro sec
 ght_mpdu_density=4
@@ -431,68 +505,21 @@ ght_mpdu_density=4
 # 1 - enable 0 - disable(default)
 gEnableFlowSteering=1
 
-# Time in microseconds after which a NAPI poll must yield
-ce_service_max_yield_time=500
+# mawc_roam_enabled - Enable/Disable MAWC during roaming
+mawc_roam_enabled=0
 
-#Maximum number of HTT messages to be processed per NAPI poll
-ce_service_max_rx_ind_flush=1
-
-# Maximum number of MSDUs the firmware will pack in one HTT_T2H_MSG_TYPE_RX_IN_ORD_PADDR_IND
-maxMSDUsPerRxInd=8
-
-# Enable NUD tracking feature
-# 1 - enable 0 - disable(default)
-gEnableNUDTracking=1
-
-# Enable PEER UNMAP CONF SUPPORT
-# 1 - enable 0 - disable(default)
-gEnablePeerUnmapConfSupport=1
-
-################ Datapath feature set End ################
-
-################ExtR HONGMI-59465 set start ###################
-RTSThreshold=2346
-gSelect5GHzMargin=5
-roam_bad_rssi_thresh_offset_2g=0
-roam_bg_scan_bad_rssi_thresh=-76
-gStaKeepAlivePeriod = 30
-gEnablePacketLog=1
-gEnableModulatedDTIM=3
-gMaxLIModulatedDTIM=3
-groam_dense_rssi_thresh_offset=5
-gtraffic_threshold=50
-gRoamBmissFirstBcnt=10
-gRoamBmissFinalBcnt=20
-gper_roam_enabled=3
-arp_ac_category=0
-gEnableSelfRecovery=1
-enable_ftopen=0
-################ExtR HONGMI-59465 set end ###################
-
-#ExtB HONGMI-59430 huzhiqiang 20190419 add disable RTT for android.net.wifi.rtt.cts.wifiRttTest
-gEnableRTTSupport=0
-
-################ NAN feature set start ###################
+# Enable/Disable the Motion Aided Wireless Connectivity
+# based NLO using this parameter
+mawc_nlo_enabled=0
 
 # Enable NAN discovery (NAN 1.0)
 # 1 - enable  0 - disable(default)
 gEnableNanSupport=1
 # Enable NAN Datapath
 genable_nan_datapath=1
+gnan_datapath_ndi_channel=6
 
 ################ NAN feature set end #####################
-
-adaptive_dwell_mode_enabled=1
-
-hostscan_adaptive_dwell_mode=1
-
-adapt_dwell_lpf_weight=80
-
-adapt_dwell_wifi_act_threshold=10
-
-MAWCEnabled=0
-
-drop_bcn_on_chan_mismatch=0
 
 # Enable/Disable rtt sta mac randomization
 enable_rtt_mac_randomization=1
@@ -506,8 +533,6 @@ gEnableSNRMonitoring=1
 #Enable/Disable LPRx
 gEnableLPRx=0
 
-#ExtR HOMGMI-61658,sunbin1.wt, add, 20190523,modify the 2.g scan time as 40ms
-active_max_channel_time_2g=40
 END
 
 # Note: Configuration parser would not read anything past the END marker
