--- a/configpanel/AndroidManifest.xml
+++ b/configpanel/AndroidManifest.xml
@@ -28,17 +28,33 @@
         android:directBootAware="true">
 
         <activity
-            android:name=".FlickerFreeSettingsActivity"
-            android:label="@string/flicker_free_settings_title">
+            android:name=".flickerfree.FlickerFreeSettingsActivity"
+            android:label="@string/flicker_free_settings_title" >
             <intent-filter>
-                <action android:name="com.android.settings.action.IA_SETTINGS" />
+                <action android:name="com.android.settings.action.EXTRA_SETTINGS" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
             <meta-data
                 android:name="com.android.settings.category"
                 android:value="com.android.settings.category.ia.display" />
             <meta-data
                 android:name="com.android.settings.summary"
-                android:resource="@string/flicker_free_settings_summary" />
+                android:resource="@string/summary_empty" />
+        </activity>
+
+        <activity
+            android:name=".sound.SoundSettingsActivity"
+            android:label="@string/sound_settings_title" >
+            <intent-filter>
+                <action android:name="com.android.settings.action.EXTRA_SETTINGS" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data
+                android:name="com.android.settings.category"
+                android:value="com.android.settings.category.ia.sound" />
+            <meta-data
+                android:name="com.android.settings.summary"
+                android:resource="@string/summary_empty" />
         </activity>
 
         <receiver android:name=".DeviceStartup" android:enabled="true">
