--- a/configpanel/AndroidManifest.xml
+++ b/configpanel/AndroidManifest.xml
@@ -39,12 +39,12 @@
                 android:value="com.android.settings.category.ia.display" />
             <meta-data
                 android:name="com.android.settings.summary"
-                android:resource="@string/summary_empty" />
+                android:resource="@string/flicker_free_settings_summary" />
         </activity>
 
         <activity
             android:name=".sound.SoundSettingsActivity"
-            android:label="@string/sound_settings_title" >
+            android:label="@string/sound_settings_title">
             <intent-filter>
                 <action android:name="com.android.settings.action.EXTRA_SETTINGS" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -54,7 +54,7 @@
                 android:value="com.android.settings.category.ia.sound" />
             <meta-data
                 android:name="com.android.settings.summary"
-                android:resource="@string/summary_empty" />
+                android:resource="@string/sound_settings_summary" />
         </activity>
 
         <receiver android:name=".DeviceStartup" android:enabled="true">
