--- a/configpanel/AndroidManifest.xml
+++ b/configpanel/AndroidManifest.xml
@@ -28,8 +28,7 @@
         android:directBootAware="true">
 
         <activity
-            android:name=".flickerfree.FlickerFreeSettingsActivity"
-            android:label="@string/flicker_free_settings_title" >
+            android:name=".flickerfree.FlickerFreeSettingsActivity">
             <intent-filter>
                 <action android:name="com.android.settings.action.EXTRA_SETTINGS" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -38,13 +37,15 @@
                 android:name="com.android.settings.category"
                 android:value="com.android.settings.category.ia.display" />
             <meta-data
+                android:name="com.android.settings.title"
+                android:resource="@string/flicker_free_settings_title" />
+            <meta-data
                 android:name="com.android.settings.summary"
                 android:resource="@string/flicker_free_settings_summary" />
         </activity>
 
         <activity
-            android:name=".sound.SoundSettingsActivity"
-            android:label="@string/sound_settings_title">
+            android:name=".sound.SoundSettingsActivity">
             <intent-filter>
                 <action android:name="com.android.settings.action.EXTRA_SETTINGS" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -52,6 +53,9 @@
             <meta-data
                 android:name="com.android.settings.category"
                 android:value="com.android.settings.category.ia.sound" />
+            <meta-data
+                android:name="com.android.settings.title"
+                android:resource="@string/sound_settings_title" />
             <meta-data
                 android:name="com.android.settings.summary"
                 android:resource="@string/sound_settings_summary" />
