--- a/configpanel/AndroidManifest.xml
+++ b/configpanel/AndroidManifest.xml
@@ -61,6 +61,23 @@
                 android:resource="@string/sound_settings_summary" />
         </activity>
 
+        <!--activity
+            android:name=".network.NetworkSettingsActivity">
+            <intent-filter>
+                <action android:name="com.android.settings.action.EXTRA_SETTINGS" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data
+                android:name="com.android.settings.category"
+                android:value="com.android.settings.category.ia.wireless" />
+            <meta-data
+                android:name="com.android.settings.title"
+                android:resource="@string/network_settings_title" />
+            <meta-data
+                android:name="com.android.settings.summary"
+                android:resource="@string/network_settings_summary" />
+        </activity-->
+
         <receiver android:name=".DeviceStartup" android:enabled="true">
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT"/>
